--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 * {
   font-family: 'Poppins', sans-serif;
@@ -13,8 +14,8 @@
 
 :root {
   --main-color: #fd4646;
-  --text-color: #171427;
-  --bg-color: white;
+  --text-color: white;
+  --bg-color: black;
 }
 
 img {
@@ -23,6 +24,10 @@ img {
 
 body {
   color: var(--text-color);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url('images/background.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .container {
@@ -50,6 +55,11 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 20px 0;
+}
+
+.nav a {
+  font-family: 'Press Start 2P', sans-serif;
+  color: var(--text-color);
 }
 
 .logo {
@@ -251,6 +261,13 @@ header {
 .add-cart:active {
   color: var(--text-color);
   background: var(--bg-color);
+}
+
+footer p {
+  text-align: center;
+  color: var(--text-color);
+  font-family: 'Press Start 2P', sans-serif;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 1080px) {
